--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "express": "4.17.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "5.11.13",
-    "nodemailer": "^6.9.3"
+    "nodemailer": "^6.9.3",
+    "peer": "0.6.1",
+    "socket.io": "3.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
