--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.6.2",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -17,8 +18,10 @@
     "express": "4.17.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "5.11.13",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.3",
-    "peer": "0.6.1",
+    "openai": "3.2.1",
+    "peer": "^0.6.1",
     "socket.io": "3.1.2"
   },
   "devDependencies": {
