--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "nodemailer": "^6.9.3",
     "openai": "3.2.1",
     "peer": "^0.6.1",
-    "socket.io": "3.1.2"
+    "socket.io": "3.1.2",
+    "stripe": "^14.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
